# statistical_rethinking_fork

./: README.md  pyproject.toml
my_code/: lecture scheduling.ipynb
my_code/chapter_4/: 4H2.ipynb  4H3.ipynb  4H4.ipynb
my_code/chapter_5/: 5H1.ipynb  5H2.ipynb  5H3.ipynb  5M1.ipynb  5M4.ipynb
