[project]
name = "rethinking-2"
version = "0.1.0"
description = ""
authors = [
    {name = "voutrata",email = "voutrata@cisco.com"}
]
readme = "README.md"
requires-python = ">3.10,<3.11"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "jupyterlab (>=4.4.4,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "watermark (>=2.5.0,<3.0.0)",
    "pymc (>=5.23.0,<6.0.0)",
    "arviz (>=0.21.0,<0.22.0)",
    "polars (>=1.31.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
